reports/notebooks.log
Traceback (most recent call last):
  File "C:\ProgramData\Anaconda3\envs\SMLv2\lib\site-packages\jupyter_cache\executors\utils.py", line 51, in single_nb_execution
    executenb(
  File "C:\ProgramData\Anaconda3\envs\SMLv2\lib\site-packages\nbclient\client.py", line 1204, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "C:\ProgramData\Anaconda3\envs\SMLv2\lib\site-packages\nbclient\util.py", line 84, in wrapped
    return just_run(coro(*args, **kwargs))
  File "C:\ProgramData\Anaconda3\envs\SMLv2\lib\site-packages\nbclient\util.py", line 62, in just_run
    return loop.run_until_complete(coro)
  File "C:\ProgramData\Anaconda3\envs\SMLv2\lib\asyncio\base_events.py", line 646, in run_until_complete
    return future.result()
  File "C:\ProgramData\Anaconda3\envs\SMLv2\lib\site-packages\nbclient\client.py", line 663, in async_execute
    await self.async_execute_cell(
  File "C:\ProgramData\Anaconda3\envs\SMLv2\lib\site-packages\nbclient\client.py", line 965, in async_execute_cell
    await self._check_raise_for_error(cell, cell_index, exec_reply)
  File "C:\ProgramData\Anaconda3\envs\SMLv2\lib\site-packages\nbclient\client.py", line 862, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply_content)
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------

@click.command()
@click.argument('path_to_magres', nargs=-1, type=click.Path(exists=True))
@click.argument('chemical-element')
@click.option('--freq_broad', '-fb', type=float, required=True, help='The frequency broadening factor to use. [required]')
@click.option('--bins_count', '-b', type=int, default=300, help='The number of bins to use in the spectrum. If not provided, the default is 300.')
@click.option('--reference', '-r', type=str, default=None, help='The reference atom for the chemical shifts.')
@click.option('--title', '-t', type=str, default=None, help='A title for the plot.')
@click.option('--frequency_range', '-fr', default=None, help='A dictionary specifying the minimum and maximum frequency to use in the spectrum. The keys should be "min" and "max".')
------------------

[1;36m  Cell [1;32mIn [3], line 8[1;36m[0m
[1;33m    @click.option('--frequency_range', '-fr', default=None, help='A dictionary specifying the minimum and maximum frequency to use in the spectrum. The keys should be "min" and "max".')[0m
[1;37m                                                                                                                                                                                         ^[0m
[1;31mSyntaxError[0m[1;31m:[0m incomplete input

SyntaxError: incomplete input (3446208754.py, line 8)

